# Nonlinear-Optimization-Practice

./: README.md
ceres_curve_fitting/: CMakeLists.txt  main.cpp
g2o_curve_fitting/: CMakeLists.txt  main.cpp
